WIP: aaf9421 feat: :sparkles: Integration case file modal

--- a/src/pages/hpp-profile.astro
+++ b/src/pages/hpp-profile.astro
@@ -67,10 +67,11 @@ const internalNavLinks = [
     </div>
   </section>
 
-  <h2 class="hpp__profile__title">How hypophosphatasia CAN cause harm</h2>
-
   <!-- Multisystemic Symptoms and Disease Burden -->
   <section id="hpp-multisystemic" class="section hpp-multisystemic">
+    <h2 class="hpp__profile__title hpp__profile__title--desktop">
+      How hypophosphatasia CAN cause harm
+    </h2>
     <article class="hpp-multisystemic__tabs">
       <ul role="tablist" class="hpp-multisystemic__tabs--nav">
         <li role="presentation" class="hpp-multisystemic__tabs--nav-item">
