mobile design created

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -26,7 +26,7 @@
 @import './components/cta';
 @import './components/stay-connected';
 @import './components/internal-nav';
-
+@import './components/alp-calculator';
 
 .section__home-video {
     margin-top: 3.25rem;
