--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import CaseFile from "../components/CaseFile.astro";
 import MainHero from "../components/MainHero.astro";
 import ALPDVideo from "../components/ALPDVideo.astro";
+import AlpCalculator from "../components/AlpCalculator.astro";
 ---
 
 <Layout title="Welcome" showHeader={true} showISI={false}>
@@ -54,5 +55,5 @@ import ALPDVideo from "../components/ALPDVideo.astro";
 
     <div class="red-string"></div>
   </section>
-
+<AlpCalculator />
 </Layout>
