--- a/src/pages/usual-suspects.astro
+++ b/src/pages/usual-suspects.astro
@@ -1,7 +1,9 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import CTA from "../components/CTA.astro";
 ---
 
-<Layout title="Usual Suspects" pageClass="usual_suspects" showISI={ false } >
 
+<Layout title="Usual Suspects" pageClass="usual_suspects" showISI={ false } >
+    <CTA variation={"variant-3"} linkURL=""  buttonLabel=""  content="" bypassModal ></CTA>
 </Layout>
