--- a/src/components/Case-Files/CaseFileModal.astro
+++ b/src/components/Case-Files/CaseFileModal.astro
@@ -32,7 +32,7 @@ import PatientCaseFilesWrapper from "./PatientCaseFilesWrapper.astro";
                 History of poor dentition and weak/loose teeth
               </li>
               <li class="item">
-                Recent diagnosis ofpseudogout/CPPD/chondrocalcinosis
+                Recent diagnosis of pseudogout/CPPD/chondrocalcinosis
               </li>
             </ul>
           </Fragment>
