Fix import Styles

--- a/src/pages/design.astro
+++ b/src/pages/design.astro
@@ -1,10 +1,10 @@
 ---
-import "../styles/settings/_design.scss";
 import Accordion from "../components/Accordion.astro";
 import Layout from "../layouts/Layout.astro";
 import CTA from "../components/CTA.astro";
 import CaseFileModal from "../components/Case-Files/CaseFileModal.astro";
 import CaseFileModalDesktop from "../components/Case-Files/CaseFileModalDesktop.astro";
+import "../styles/settings/_design.scss";
 ---
 
 <Layout
@@ -453,9 +453,9 @@ import CaseFileModalDesktop from "../components/Case-Files/CaseFileModalDesktop.
   </section>
   <section class="design-system-section">
     <div class="section-wrapper section-wrapper--small">
-      <h1 class="title">Case Modal Desktop</h1>
+      <h1 class="title">Case Modal Desktop Version</h1>
       <button class="button button--custom-bg case-files-modal-trigger--desktop"
-        >View Patient case files desktop version</button
+        >View Patient case files</button
       >
       <div class="case__files_modal_wrapper">
         <CaseFileModalDesktop />
