--- a/src/styles/components/_case-file-modal.scss
+++ b/src/styles/components/_case-file-modal.scss
@@ -37,9 +37,9 @@
       background-color: var(--custom-folder-color);
       padding: 2.5rem 2rem;
 
-      // @media screen and (min-width: 1050px) {
-      //   padding: 2rem;
-      // }
+      >[role='tabpanel'] {
+        height: 914px;
+      }
     }
 
     >[role='tablist'] {
@@ -94,13 +94,14 @@
       background-position: center;
       background-size: cover;
       padding: 0;
+      // height: 914px;
     }
 
     .patient__case_grid {
       display: grid;
       grid-template-columns: 34% 42% 24%;
       grid-template-rows: 1fr;
-      height: 55.9375rem;
+      height: 100%;
 
       &_col {
         --section--spacing: 1.5rem;
@@ -205,8 +206,21 @@
             margin-bottom: 0.5rem;
           }
 
-          ul li.item strong {
+          a.custom__tab_link {
+            display: inline-block;
+            cursor: pointer;
+            font-weight: 600;
             text-decoration: underline;
+          }
+
+          ul li.item {
+            strong {
+              text-decoration: underline;
+            }
+
+            ul {
+              margin-top: 0.5rem;
+            }
           }
         }
 
@@ -491,13 +505,17 @@
 
           .patient__info_grid_photo {
             padding-top: 0;
-            // height: 296px;
+            height: 290px;
+
+            @media screen and (min-width: 1100px) {
+              height: 325px;
+            }
 
             img {
               position: relative;
-              top: -1.65rem;
+              top: -1.85rem;
               margin: 0 auto;
-              width: 207px;
+              width: 225px;
 
               &.photo-of-Anna {
                 top: -1.05rem;
@@ -543,7 +561,11 @@
                 min-height: 45px;
                 padding-top: 10px;
                 padding-bottom: 5px;
-                padding-left: 50px;
+                padding-left: 25px;
+
+                @media screen and (min-width: 1365px) {
+                  padding-left: 50px;
+                }
 
                 &.label {
                   font-family: 'Oswald';
