Update Component Layout

--- a/src/components/Case-Files/PatientCaseFileDesktop.astro
+++ b/src/components/Case-Files/PatientCaseFileDesktop.astro
@@ -169,9 +169,9 @@ const notesTab = `tab-notes-${uniqueId}`;
       <div class="patient__info_grid_data">
         <ul>
           <li class="label">age</li>
-          <li>{age}</li>
+          <li class="age">{age}</li>
           <li class="label">gender</li>
-          <li>{gender}</li>
+          <li class="gender">{gender}</li>
         </ul>
       </div>
       <div class="patient__info_grid_finger-print">
