Fix Internal Nav not missing styles & refactor js

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -12,6 +12,7 @@
 @import './components/_isi.scss';
 @import './components/_tabs.scss';
 @import './components/_main-hero.scss';
+@import './components/internal-nav.scss';
 @import './components/_enter-site.scss';
 @import './components/_forms.scss';
 @import './components/_accordions.scss';
