--- a/src/pages/identifying-hpp.astro
+++ b/src/pages/identifying-hpp.astro
@@ -166,6 +166,111 @@ const internalNavLinks = [
     </section>
 
     <section class="section identifying-hpp-page__testing" id="testing">
+        <article class="testing__substrate-testing">
+
+            <div class="mobile-content">
+                <div class="substrate-testing__table">
+                    <div class="mobile-content-wrapper">
+                        <div class="wrapper">
+                            <h2 class="substrate-testing__title">
+                                what you may not know<br class="md:hidden"/> about substrate testing
+                            </h2>
+                            <p class="substrate-testing__description">
+                                If a patient presents with low alkaline phosphatase and signs/symptoms of hypophosphatasia, a diagnosis can be confirmed with substrate testing. However, it’s important to be aware of the limitations that come with these tests. Elevated PLP and/or PEA can support a diagnosis of hypophosphatasia, but these tests are subject to certain limitations<sup>7,11</sup>:
+                            </p>
+                        </div>
+                    </div>
+                    <div class="mobile-content-wrapper">
+                        <div class="wrapper">
+                            <h3 class="substrate-testing__header">
+                                Substrate Test and Limitations
+                            </h3>
+                        </div>
+                    </div>
+                    <div class="mobile-content-wrapper">
+                        <div class="wrapper">
+                            <h4 class="substrate__name">
+                                PEA<sup>10-14</sup>
+                            </h4>
+                            <h6 class="substrate-table__header">
+                                LIMITATIONS:
+                            </h6>
+                            <ul class="substrate__limitations-list">
+                                <li>
+                                    May be normal in some patients with hypophosphatasia
+                                </li>
+                                <li>
+                                    Can be collected via spot urine test or 24-hour urine collection test, which can result in unreliable results due to:
+    
+                                    <ul class="substrate__limitations-list">
+                                        <li>
+                                            Incomplete collection (omission of one or more samples in 24 hours)
+                                        </li>
+                                        <li>Incorrect collection time</li>
+                                        <li>Incomplete emptying of bladder</li>
+                                        <li>Poor storage of sample</li>
+                                        <li>Inclusion of first 2 morning samples</li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="mobile-content-wrapper">
+                        <div class="wrapper">
+                            <h4 class="substrate__name">
+                                PLP (vitamin B<sub>6</sub>)<sup>7,12,15</sup>
+                            </h4>
+                            <h6 class="substrate-table__header">
+                                LIMITATIONS:
+                            </h6>
+                            <ul class="substrate__limitations-list">
+                                <li>
+                                    May be elevated in individuals taking supplements containing B<sub>6</sub>
+                                </li>
+                                <li>
+                                    May appear normal or low in patients with hypophosphatasia. This does not invalidate the hypophosphatasia diagnosis.
+                                </li>
+                                <li>
+                                    PLP is light-sensitive and must be protected from light; will need to be collected with amber-colored tube<sup class="symbol-sup">*</sup>
+                                </li>
+                                <li>
+                                    PLP decreases in samples stored at room temperature due to dephosphorylation to PL
+                                </li>
+                                <li>
+                                    PLP is bound to albumin; it can be affected by nutrition, smoking, inflammation, and drugs
+                                </li>
+                                <li>
+                                    PLP must be taken in fasting state as it may decrease after high-carbohydrate intake
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="mobile-content-wrapper">
+                        <div class="wrapper">
+                            <h4 class="substrate__name">
+                                PPi<sup>10</sup>
+                            </h4>
+                            <h6 class="substrate-table__header">
+                                LIMITATIONS:
+                            </h6>
+                            <ul class="substrate__limitations-list">
+                                <li>
+                                    These tests are done in research settings only and are not commercially available
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="mobile-content-wrapper">
+                        <div class="wrapper">
+                            <p class="mobile-table__footer">
+                                PEA=phosphoethanolamine; PLP=pyridoxal 5’-phosphate, the active form of vitamin B6; PPi=inorganic pyrophosphate.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </article>
     </section>
     <section
         class="section identifying-hpp-page__multidisciplinary-care-team"
