fix: :bug: Fix Design Page Styles Import
This issue was preventing us to compile properly the css for the design page and it would not work in the server.

--- a/src/pages/design.astro
+++ b/src/pages/design.astro
@@ -4,7 +4,7 @@ import Layout from "../layouts/Layout.astro";
 import CTA from "../components/CTA.astro";
 import CaseFileModal from "../components/Case-Files/CaseFileModal.astro";
 import CaseFileModalDesktop from "../components/Case-Files/CaseFileModalDesktop.astro";
-import "../styles/settings/_design.scss";
+import "../styles/settings/design.scss";
 ---
 
 <Layout
