--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,7 @@
 ---
 import "@fancyapps/ui/dist/fancybox/fancybox.css";
+import "@fancyapps/ui/dist/panzoom/panzoom.css";
+import "@fancyapps/ui/dist/panzoom/panzoom.toolbar.css";
 import "../styles/style.scss";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
