Add Design Page Styles

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -5,6 +5,7 @@
 @import './settings/_layouts.scss';
 @import './settings/_global.scss';
 @import './settings/_utils.scss';
+@import './settings/design.scss';
 @import './components/_buttons.scss';
 @import './components/_header.scss';
 @import './components/_header-navigation.scss';
